2006-10-12       Gaius Mulley <gaius@gnu.org>

	* gm2/patches/gcc/4.1.1/01.gaius_patch_gcc: added.

2006-10-07       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm.2c:  fixed conditional goto expressions.

2006-10-04       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm.2c:  added debugging stub.

2006-10--03       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  fixed BuildEnd
	  to use IsProcedureGccNested in CodeKillLocalVar.
	* gm2/gm2-compiler/M2GCCDeclare.def:
	  export IsProcedureGccNested.
	
2006-10-01       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  modified BuildEnd
	  to taken an extra parameter, nested, and set it
	  accordingly.

2006-09-30       Waldek Hebisch <hebisch@math.uni.wroc.pl>

	* gm2/gccgm2.c: (gccgm2_BuildEndFunctionCode) only
	  call gimplify_function_tree and cgraph_finalize_function
	  if the procedure is not nested.

2006-09-29       Gaius Mulley <gaius@gnu.org>

	* removed execute permissions for source files.
	* gm2/patches/gcc/4.1.0/01.gaius_patch_gcc: improved.
	* gm2/gccgm2.c:  fixed comment.
	
2006-09-20       Gaius Mulley <gaius@gnu.org>

	* gm2/patches/4.1.0/01.gaius_patch_gcc: added.

2006-09-19       Gaius Mulley <gaius@gnu.org>

	* huge amount of changes to bring gm2 up to gcc-4.1.0 and
	  also make it build with gcc-4.1.0.
	* modified gm2/
          Make-lang.in config-lang.in configure.in gccgm2.c 
          gm2-common.h gm2-lang.c gm2-lang.h gm2-tree.h gm2.texi 
          gm2builtins.c gm2spec.c lang-specs.h bnf/m2-3.bnf 
          examples/server/sckt.c examples/server/sckt.def 
          gm2-compiler/M2Comp.mod gm2-compiler/M2GCCDeclare.mod 
          gm2-compiler/M2GenGCC.mod gm2-compiler/M2Options.def 
          gm2-compiler/M2Options.mod gm2-compiler/M2Preprocess.mod 
          gm2-compiler/gccgm2.def gm2-compiler/gm2.mod 
          gm2-compiler/gm2lgen.mod gm2-libs/ASCII.def gm2-libs/ASCII.mod 
          gm2-libs/Args.def gm2-libs/Debug.def gm2-libs/IO.mod 